add findbugs checking; fix some findbugs warnings; add override and deprecated annotations
git-svn-id: http://svn.lal.in2p3.fr/LCG/QWG/scdb-ant-utils/trunk@3581 60caac41-0bef-0310-ae6f-f8fb43407fe4