@@ -52,9 +52,6 @@ public class NotifyClientTask extends Task {
 	/* The XPath expression to get the domain name. */
 	static private final XPathExpression findDomainXmlDb;
 
-	/* Print debugging messages */
-	private boolean debugTask = false;
-
 	/*
 	 * Setup the various XPathExpressions. They are constant and can be shared
 	 * among instances of this class.
@@ -88,6 +85,7 @@ public class NotifyClientTask extends Task {
 	/*
 	 * Method used by ant to execute this task.
 	 */
+	@Override
 	public void execute() throws BuildException {
 
 		LinkedList<DatagramPacket> packets = new LinkedList<DatagramPacket>();
@@ -112,18 +110,6 @@ public class NotifyClientTask extends Task {
 
 		// Notify the clients.
 		notify(packets);
-	}
-
-	/**
-	 * Setting this flag will print debugging information from the task itself.
-	 * This is primarily useful if one wants to debug a build using the command
-	 * line interface.
-	 * 
-	 * @param debugTask
-	 *            flag to print task debugging information
-	 */
-	public void setDebugTask(boolean debugTask) {
-		this.debugTask = debugTask;
 	}
 
 	/*
@@ -184,7 +170,7 @@ public class NotifyClientTask extends Task {
 			String f = temp[i];
 
 			File file = new File(basedir, f);
-			Long time = new Long(file.lastModified() / 1000);
+			Long time = Long.valueOf(file.lastModified() / 1000);
 			filetimes.put(file, time);
 		}
 	}
